--- a/prepros.cfg
+++ b/prepros.cfg
@@ -994,6 +994,17 @@
           "optimized": false,
           "height": 0,
           "width": 0
+        },
+        "ae0979a0": {
+          "id": "ae0979a0",
+          "path": "Version HAML/register2.html",
+          "output": "Version HAML/register2.html",
+          "name": "register2.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
         }
       },
       "deploymentHistory": {},
