empezando con CSS

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -1016,6 +1016,86 @@
           "imported": false,
           "parents": [],
           "type": "haml"
+        },
+        "d2029aaa": {
+          "id": "d2029aaa",
+          "path": "Version HAML/compiled/css/main.css",
+          "output": "Version HAML/compiled/css/main-dist.css",
+          "name": "main.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "3cf1f168": {
+          "id": "3cf1f168",
+          "path": "Version HAML/compiled/css/atomos/logo.css",
+          "output": "Version HAML/compiled/css/atomos/logo-dist.css",
+          "name": "logo.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "941928ff": {
+          "id": "941928ff",
+          "path": "Version HAML/compiled/css/atomos/nav.css",
+          "output": "Version HAML/compiled/css/atomos/nav-dist.css",
+          "name": "nav.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "1ffdddb2": {
+          "id": "1ffdddb2",
+          "path": "Version HAML/compiled/css/vendors/normalize.css",
+          "output": "Version HAML/compiled/css/vendors/normalize-dist.css",
+          "name": "normalize.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "e9e7cf72": {
+          "id": "e9e7cf72",
+          "path": "Version HAML/compiled/css/moleculas/header.css",
+          "output": "Version HAML/compiled/css/moleculas/header-dist.css",
+          "name": "header.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
         }
       },
       "deploymentHistory": {},
